--- a/.github/workflows/publish-quarto.yml
+++ b/.github/workflows/publish-quarto.yml
@@ -6,18 +6,23 @@ on:
 
 jobs:
   build-deploy:
+      name: build environment
       runs-on: ubuntu-latest
       permissions:
         contents: write
       steps:
         - name: Check out repository
-          uses: actions/checkout@v3
-          
+          uses: actions/checkout@v4
+          with:
+            persist-credentials: false
+        - name: set up python
+          uses: actions/setup-python@v5
+          with:
+            python-version: "3.x"
         - name: Set up Quarto
           uses: quarto-dev/quarto-actions/setup@v2
           with:
             version: 1.3.340
-
         - name: Publish to GitHub Pages (and render)
           uses: quarto-dev/quarto-actions/publish@v2
           with:
