--- a/.github/workflows/publish-quarto.yml
+++ b/.github/workflows/publish-quarto.yml
@@ -19,6 +19,11 @@ jobs:
           uses: actions/setup-python@v5
           with:
             python-version: "3.x"
+        - name: display the path
+          shell: python
+          run: |
+            import os
+            print(os.environ['PATH'])
         - name: Set up Quarto
           uses: quarto-dev/quarto-actions/setup@v2
           with:
