--- a/.github/workflows/publish-quarto.yml
+++ b/.github/workflows/publish-quarto.yml
@@ -19,11 +19,10 @@ jobs:
           uses: actions/setup-python@v5
           with:
             python-version: "3.x"
-        - name: display the path
-          shell: python
+        - name: install dependencies
           run: |
-            import os
-            print(os.environ['PATH'])
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
         - name: Set up Quarto
           uses: quarto-dev/quarto-actions/setup@v2
           with:
