--- a/.github/workflows/publish-quarto.yml
+++ b/.github/workflows/publish-quarto.yml
@@ -23,6 +23,9 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install -r requirements.txt
+        - name: check git environment
+          run: |
+            git config --list
         - name: Set up Quarto
           uses: quarto-dev/quarto-actions/setup@v2
           with:
