update workflow again

--- a/.github/workflows/publish-quarto.yml
+++ b/.github/workflows/publish-quarto.yml
@@ -26,6 +26,7 @@ jobs:
         - name: check git environment
           run: |
             git config user.name guidoeco
+            git remote set-url origin https://guidoeco@github.com/guidoeco/Wurfel.git
             git config --list
         - name: Set up Quarto
           uses: quarto-dev/quarto-actions/setup@v2
