--- a/.github/workflows/publish-quarto.yml
+++ b/.github/workflows/publish-quarto.yml
@@ -14,7 +14,7 @@ jobs:
         - name: Check out repository
           uses: actions/checkout@v4
           with:
-            persist-credentials: false
+            persist-credentials: true
         - name: set up python
           uses: actions/setup-python@v5
           with:
